--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
     </div>
   </div>
   <script src="js/jquery-3.5.1.min.dc5e7f18c8.js?site=61d9787a965db21ea6815e1c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="61d9787a965db21ea6815e1c/js/webflow.a9cdc1e9c.js" type="text/javascript"></script>
+  <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
  
 </body>
 
