--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }(window, document);
   </script>
   <link href="img/favicon.svg" rel="shortcut icon" type="image/x-icon">
-  <link href="img/webclip.png" rel="apple-touch-icon">
+  <link href="img/favicon.svg" rel="apple-touch-icon">
 </head>
 
 <body class="body">
