--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       <div class="call-to-action-buttons"><a href="#" class="primary-button-black w-button">Віртуальна подорож</a></div>
     </div>
   </div>
+  <style>
+    .w-webflow-badge {
+    display: none !important;
+}
+  </style>
   <div class="container-2 w-container">
     <h2 class="heading-5">Новини</h2>
     <div class="w-layout-grid grid-2">
