--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com -->
 <!-- Last Published: Mon Jan 24 2022 20:00:37 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="firstedsitetype1.webflow.io" data-wf-page="61d9787a965db270b0815e20" data-wf-site="61d9787a965db21ea6815e1c" data-wf-status="1">
 
 <head>
   <meta charset="utf-8">
-  <title>ЗОШ №27</title>
+  <title>Portfolio - Webflow HTML website template</title>
   <meta content="Portfolio - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
@@ -29,8 +29,8 @@
       n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
     }(window, document);
   </script>
-  <link href="img/favicon.svg" rel="shortcut icon" type="image/x-icon">
-  <link href="img/favicon.svg" rel="apple-touch-icon">
+  <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="img/webclip.png" rel="apple-touch-icon">
 </head>
 
 <body class="body">
@@ -50,11 +50,6 @@
       <div class="call-to-action-buttons"><a href="#" class="primary-button-black w-button">Віртуальна подорож</a></div>
     </div>
   </div>
-  <style>
-    .w-webflow-badge {
-    display: none !important;
-}
-  </style>
   <div class="container-2 w-container">
     <h2 class="heading-5">Новини</h2>
     <div class="w-layout-grid grid-2">
@@ -146,9 +141,9 @@
       </div>
     </div>
   </div>
- <script src="js/jquery-3.5.1.min.dc5e7f18c8.js?site=61d9787a965db21ea6815e1c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/jquery-3.5.1.min.dc5e7f18c8.js?site=61d9787a965db21ea6815e1c" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="61d9787a965db21ea6815e1c/js/webflow.a9cdc1e9c.js" type="text/javascript"></script>
-  
+  <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 </body>
 
 </html>
